@@ -1,3 +1,13 @@
+2008-09-03  Geoffrey Garen  <ggaren@apple.com>
+
+        Reviewed by Darin Adler.
+        
+        Use isUndefinedOrNull() instead of separate checks for each in op_eq_null
+        and op_neq_null.
+
+        * VM/Machine.cpp:
+        (KJS::Machine::privateExecute):
+
 2008-09-02  Csaba Osztrogonac  <oszi@inf.u-szeged.hu>
 
         Reviewed by Darin Adler.
